--- a/src/components/InputField/InputField.scss
+++ b/src/components/InputField/InputField.scss
@@ -2,6 +2,7 @@
   grid-area: md;
 }
 .input-field {
+  font-size: 16px;
   height: calc(100% - 50px);
   width: calc(100% - 40px);;
   margin-top: 50px;
@@ -11,4 +12,5 @@
   resize: none;
   padding: 0;
   border: 0;
+  white-space: pre-wrap;
 }
