--- a/src/components/Preview/Preview.scss
+++ b/src/components/Preview/Preview.scss
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 0;
+  min-height: 0;
 }
 .preview-header {
   min-height: 50px;
@@ -17,13 +19,53 @@
 }
 .preview-content {
   flex-grow: 1;
+  height: 100%;
   margin-left: 30px;
   margin-right: 10px;
   width: calc(100% - 40px);
+  resize: none;
+  overflow: auto;
+
+  * {
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+  }
+  ul {
+    padding-inline-start: 40px;
+  }
+
+  blockquote {
+    margin-inline-start: 40px;
+    margin-inline-end: 40px;
+  }
+
+  pre {
+    font-family: monospace;
+  }
 }
 #left-icon {
   margin-left: 30px;
 }
 #right-icon {
   margin-right: 10px;
+}
+::-webkit-scrollbar{
+  width:12px;
+}
+::-webkit-scrollbar-thumb{
+  border-width:1px 1px 1px 2px;
+  border-color: #777;
+  background-color: #aaa;
+}
+::-webkit-scrollbar-thumb:hover{
+  border-width: 1px 1px 1px 2px;
+  border-color: #555;
+  background-color: #777;
+}
+::-webkit-scrollbar-track{
+  border-width:0;
+}
+::-webkit-scrollbar-track:hover{
+  border-left: solid 1px #aaa;
+  background-color: #eee;
 }
