Implement saving to local storage

--- a/src/components/Preview/Preview.scss
+++ b/src/components/Preview/Preview.scss
@@ -1,5 +1,5 @@
 .preview {
-  background-color: #CDCDCD;
+  background-color: #E8E8E8;
   grid-area: html;
   display: flex;
   flex-direction: column;
