--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -8,12 +8,13 @@
 }
 .menu div{
   cursor: pointer;
-  margin: 30px auto;
-  height: 40px;
+  margin: 10px auto;
+  height: 60px;
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .menu div:hover{
-  background-color: #777777;
+  background-color: #8b8b8b;
 }
