--- a/src/components/TextField/TextField.scss
+++ b/src/components/TextField/TextField.scss
@@ -2,7 +2,7 @@
   grid-area: md;
 }
 .input-field {
-  font-size: 16px;
+  font: 16px UbuntuMono;
   height: calc(100% - 50px);
   width: calc(100% - 40px);;
   margin-top: 50px;
