--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import "fonts/Open-Sans";
+@import "fonts/UbuntuMono";
+
 * {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open-Sans', sans-serif;
   margin: 0;
   padding: 0;
 }
