Remove the blue textarea border

--- a/src/components/TextField/TextField.scss
+++ b/src/components/TextField/TextField.scss
@@ -1,8 +1,8 @@
 .md-content {
   grid-area: md;
 }
-.input-field {
-  font: 16px UbuntuMono;
+.text-field {
+  font: 20px UbuntuMono;
   height: calc(100% - 50px);
   width: calc(100% - 40px);;
   margin-top: 50px;
@@ -13,4 +13,7 @@
   padding: 0;
   border: 0;
   white-space: pre-wrap;
+}
+.text-field:focus {
+  outline: none;
 }
